--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=tasklyserver-production.up.railway.app/api/v1
+VITE_API_BASE_URL=https://tasklyserver-production.up.railway.app/api/v1
